--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aa54g3v8sr6i4e.ceffmvvhpvbx.eu-west-3.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ebdb
+DB_USERNAME=jetmanpay
+DB_PASSWORD=j3tm4np4y$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
