--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "spatie/laravel-permission": "^3.11",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
