--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_PORT=587
+MAIL_USERNAME=52e47e7264b655
+MAIL_PASSWORD=03859985f38b8a
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="noreply@jetmanpay.net"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
