Adds claim recepter to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ MAIL_PASSWORD=03859985f38b8a
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="noreply@jetmanpay.net"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_CLAIM_TARGETS="manager@mail.com"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
